--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 07:05:03 2018</p>
+         Last Run: Sat Oct 27 08:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -46,9 +46,9 @@
                         <td>10</td>
                         <td>10</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>18</td>
                         <td>WNW</td>
                         <td>0</td>
                      </tr>
@@ -58,7 +58,7 @@
                         <td>8</td>
                         <td>6</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>31</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
@@ -70,7 +70,7 @@
                         <td>6</td>
                         <td>4</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -79,10 +79,10 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>4</td>
-                        <td>2</td>
+                        <td>5</td>
+                        <td>3</td>
                         <td>1</td>
-                        <td>41</td>
+                        <td>40</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
@@ -136,7 +136,7 @@
                  "10",
                  "6",
                  "4",
-                 "2"
+                 "3"
                ]
              },
              {
@@ -149,7 +149,7 @@
                  "10",
                  "8",
                  "6",
-                 "4"
+                 "5"
                ]
              }
            ]
@@ -215,10 +215,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "26",
-                 "27",
-                 "32",
-                 "37",
-                 "41"
+                 "26",
+                 "31",
+                 "36",
+                 "40"
                ]
              },
              {
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 07:05:03 2018</p>
+         Last Run: Sat Oct 27 08:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -272,23 +272,23 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>3</td>
-                        <td>68</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>86</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>64</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>79</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -300,7 +300,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>S</td>
-                        <td>73</td>
+                        <td>76</td>
                      </tr>
                   </tbody>
                </table>
@@ -409,7 +409,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "3",
+                 "2",
                  "2"
                ]
              },
@@ -418,7 +418,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
+                 "71",
                  "64",
                  "60"
                ]
@@ -428,9 +428,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "86",
-                 "79",
-                 "73"
+                 "89",
+                 "80",
+                 "76"
                ]
              }
            ]
