--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 09:05:03 2018</p>
+         Last Run: Sat Oct 27 10:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>10</td>
                         <td>10</td>
                         <td>0</td>
-                        <td>26</td>
+                        <td>27</td>
                         <td>1</td>
                         <td>21</td>
                         <td>WNW</td>
@@ -46,10 +46,10 @@
                         <td>10</td>
                         <td>10</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>28</td>
                         <td>0</td>
-                        <td>19</td>
-                        <td>WNW</td>
+                        <td>18</td>
+                        <td>W</td>
                         <td>0</td>
                      </tr>
                      <tr>
@@ -58,9 +58,9 @@
                         <td>8</td>
                         <td>6</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
                         <td>0</td>
                      </tr>
@@ -70,23 +70,23 @@
                         <td>6</td>
                         <td>4</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>3</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>4</td>
-                        <td>2</td>
+                        <td>5</td>
+                        <td>3</td>
                         <td>1</td>
-                        <td>41</td>
+                        <td>40</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>13</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -136,7 +136,7 @@
                  "10",
                  "6",
                  "4",
-                 "2"
+                 "3"
                ]
              },
              {
@@ -149,7 +149,7 @@
                  "10",
                  "8",
                  "6",
-                 "4"
+                 "5"
                ]
              }
            ]
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "26",
                  "27",
-                 "31",
-                 "37",
-                 "41"
+                 "28",
+                 "32",
+                 "36",
+                 "40"
                ]
              },
              {
@@ -229,8 +229,8 @@
                  "0",
                  "0",
                  "0",
-                 "3",
-                 "13"
+                 "4",
+                 "11"
                ]
              }
            ]
@@ -242,12 +242,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 09:05:03 2018</p>
+         Last Run: Sat Oct 27 10:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +273,7 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>3</td>
-                        <td>71</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
@@ -281,26 +282,26 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Overcast</td>
-                        <td>4</td>
-                        <td>1</td>
+                        <td>3</td>
+                        <td>0</td>
                         <td>2</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>80</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>6</td>
-                        <td>3</td>
+                        <td>5</td>
                         <td>2</td>
-                        <td>60</td>
+                        <td>2</td>
+                        <td>61</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>S</td>
-                        <td>75</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -345,8 +346,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "-1",
-                 "1",
-                 "3"
+                 "0",
+                 "2"
                ]
              },
              {
@@ -356,8 +357,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "2",
-                 "4",
-                 "6"
+                 "3",
+                 "5"
                ]
              }
            ]
@@ -418,9 +419,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "64",
-                 "60"
+                 "72",
+                 "65",
+                 "61"
                ]
              },
              {
@@ -429,8 +430,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "88",
-                 "80",
-                 "75"
+                 "81",
+                 "67"
                ]
              }
            ]
