--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 11:05:04 2018</p>
+         Last Run: Sat Oct 27 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -49,7 +49,7 @@
                         <td>28</td>
                         <td>0</td>
                         <td>18</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>0</td>
                      </tr>
                      <tr>
@@ -58,10 +58,10 @@
                         <td>8</td>
                         <td>6</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>0</td>
                      </tr>
                      <tr>
@@ -70,7 +70,7 @@
                         <td>6</td>
                         <td>4</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>38</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -79,14 +79,14 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>5</td>
-                        <td>3</td>
+                        <td>4</td>
+                        <td>2</td>
                         <td>1</td>
                         <td>42</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>10</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -136,7 +136,7 @@
                  "10",
                  "6",
                  "4",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -149,7 +149,7 @@
                  "10",
                  "8",
                  "6",
-                 "5"
+                 "4"
                ]
              }
            ]
@@ -216,8 +216,8 @@
                "data":[
                  "27",
                  "28",
-                 "32",
-                 "37",
+                 "33",
+                 "38",
                  "42"
                ]
              },
@@ -230,7 +230,7 @@
                  "0",
                  "0",
                  "4",
-                 "10"
+                 "11"
                ]
              }
            ]
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 11:05:04 2018</p>
+         Last Run: Sat Oct 27 12:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -272,36 +272,36 @@
                         <td>Overcast</td>
                         <td>2</td>
                         <td>-1</td>
-                        <td>2</td>
-                        <td>73</td>
+                        <td>3</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>88</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Overcast</td>
-                        <td>4</td>
-                        <td>1</td>
+                        <td>3</td>
+                        <td>0</td>
                         <td>2</td>
-                        <td>65</td>
+                        <td>63</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>80</td>
+                        <td>82</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>6</td>
-                        <td>3</td>
+                        <td>5</td>
                         <td>2</td>
-                        <td>61</td>
+                        <td>2</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>S</td>
-                        <td>68</td>
+                        <td>SSE</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -346,8 +346,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "-1",
-                 "1",
-                 "3"
+                 "0",
+                 "2"
                ]
              },
              {
@@ -357,8 +357,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "2",
-                 "4",
-                 "6"
+                 "3",
+                 "5"
                ]
              }
            ]
@@ -409,7 +409,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "3",
                  "2",
                  "2"
                ]
@@ -419,9 +419,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "65",
-                 "61"
+                 "71",
+                 "63",
+                 "60"
                ]
              },
              {
@@ -429,9 +429,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
-                 "80",
-                 "68"
+                 "87",
+                 "82",
+                 "69"
                ]
              }
            ]
