--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 13:06:11 2018</p>
+         Last Run: Sat Oct 27 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -31,26 +31,26 @@
                      <tr>
                         <td>04:00 PM</td>
                         <td>Clear</td>
-                        <td>11</td>
-                        <td>11</td>
+                        <td>12</td>
+                        <td>12</td>
                         <td>0</td>
-                        <td>22</td>
+                        <td>20</td>
                         <td>1</td>
-                        <td>21</td>
+                        <td>23</td>
                         <td>WNW</td>
-                        <td>2</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>05:00 PM</td>
                         <td>Clear</td>
-                        <td>10</td>
-                        <td>10</td>
+                        <td>11</td>
+                        <td>11</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>21</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>21</td>
                         <td>WNW</td>
-                        <td>0</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>8</td>
                         <td>6</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
@@ -73,7 +73,7 @@
                         <td>37</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>2</td>
                      </tr>
                      <tr>
@@ -81,12 +81,12 @@
                         <td>Clear</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>1</td>
-                        <td>42</td>
+                        <td>0</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>3</td>
+                        <td>WNW</td>
+                        <td>2</td>
                      </tr>
                   </tbody>
                </table>
@@ -132,8 +132,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "12",
                  "11",
-                 "10",
                  "6",
                  "4",
                  "3"
@@ -145,8 +145,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "12",
                  "11",
-                 "10",
                  "8",
                  "6",
                  "5"
@@ -206,7 +206,7 @@
                  "0",
                  "0",
                  "0",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "22",
-                 "28",
-                 "33",
+                 "20",
+                 "21",
+                 "32",
                  "37",
-                 "42"
+                 "43"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "2",
+                 "7",
+                 "6",
                  "0",
-                 "0",
                  "2",
-                 "3"
+                 "2"
                ]
              }
            ]
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 13:06:11 2018</p>
+         Last Run: Sat Oct 27 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -273,23 +273,23 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>3</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>89</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>4</td>
                         <td>1</td>
                         <td>2</td>
-                        <td>60</td>
+                        <td>62</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SSE</td>
-                        <td>83</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -297,11 +297,11 @@
                         <td>6</td>
                         <td>3</td>
                         <td>2</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>S</td>
-                        <td>75</td>
+                        <td>SSE</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -419,9 +419,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "60",
-                 "59"
+                 "68",
+                 "62",
+                 "60"
                ]
              },
              {
@@ -429,9 +429,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "89",
-                 "83",
-                 "75"
+                 "86",
+                 "76",
+                 "68"
                ]
              }
            ]
