--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 17:05:03 2018</p>
+         Last Run: Sat Oct 27 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -29,40 +29,28 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>06:00 PM</td>
-                        <td>Clear</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>0</td>
-                        <td>28</td>
-                        <td>0</td>
-                        <td>13</td>
-                        <td>WNW</td>
-                        <td>4</td>
-                     </tr>
-                     <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
                         <td>6</td>
-                        <td>4</td>
-                        <td>0</td>
-                        <td>35</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>WNW</td>
                         <td>3</td>
+                        <td>0</td>
+                        <td>33</td>
+                        <td>0</td>
+                        <td>14</td>
+                        <td>WNW</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>4</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>39</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>11</td>
                         <td>WNW</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                   </tbody>
                </table>
@@ -95,7 +83,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "06:00 PM",
              "07:00 PM",
              "08:00 PM"
            ],
@@ -106,9 +93,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "6",
-                 "4",
-                 "2"
+                 "3",
+                 "1"
                ]
              },
              {
@@ -117,7 +103,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "8",
                  "6",
                  "4"
                ]
@@ -160,7 +145,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "06:00 PM",
              "07:00 PM",
              "08:00 PM"
            ],
@@ -171,7 +155,6 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
                  "0"
                ]
              },
@@ -180,9 +163,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "28",
-                 "35",
-                 "40"
+                 "33",
+                 "39"
                ]
              },
              {
@@ -190,9 +172,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
-                 "3",
-                 "4"
+                 "5",
+                 "5"
                ]
              }
            ]
@@ -210,7 +191,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 17:05:03 2018</p>
+         Last Run: Sat Oct 27 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -235,11 +216,11 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>86</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -247,23 +228,23 @@
                         <td>4</td>
                         <td>1</td>
                         <td>2</td>
-                        <td>62</td>
+                        <td>59</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SSE</td>
-                        <td>76</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>5</td>
+                        <td>6</td>
+                        <td>3</td>
                         <td>2</td>
-                        <td>2</td>
-                        <td>58</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
-                        <td>68</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -309,7 +290,7 @@
                "data":[
                  "-2",
                  "1",
-                 "2"
+                 "3"
                ]
              },
              {
@@ -320,7 +301,7 @@
                "data":[
                  "2",
                  "4",
-                 "5"
+                 "6"
                ]
              }
            ]
@@ -381,9 +362,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
-                 "62",
-                 "58"
+                 "68",
+                 "59",
+                 "57"
                ]
              },
              {
@@ -391,9 +372,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "86",
-                 "76",
-                 "68"
+                 "85",
+                 "75",
+                 "67"
                ]
              }
            ]
@@ -410,7 +391,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 17:05:03 2018</p>
+         Last Run: Sat Oct 27 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -434,36 +415,36 @@
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>15</td>
+                        <td>14</td>
                         <td>77</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>80</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>67</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>79</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>4</td>
-                        <td>1</td>
+                        <td>5</td>
+                        <td>2</td>
                         <td>12</td>
                         <td>59</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>78</td>
+                        <td>79</td>
                      </tr>
                   </tbody>
                </table>
@@ -509,7 +490,7 @@
                "data":[
                  "-2",
                  "0",
-                 "1"
+                 "2"
                ]
              },
              {
@@ -520,7 +501,7 @@
                "data":[
                  "1",
                  "3",
-                 "4"
+                 "5"
                ]
              }
            ]
@@ -571,8 +552,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "15",
                  "14",
+                 "13",
                  "12"
                ]
              },
@@ -591,9 +572,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "81",
                  "80",
-                 "79",
-                 "78"
+                 "79"
                ]
              }
            ]
