--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 20:05:03 2018</p>
+         Last Run: Sat Oct 27 21:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>3</td>
-                        <td>68</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SSE</td>
@@ -55,8 +55,8 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>6</td>
-                        <td>3</td>
+                        <td>5</td>
+                        <td>2</td>
                         <td>2</td>
                         <td>56</td>
                         <td>1</td>
@@ -108,7 +108,7 @@
                "data":[
                  "-2",
                  "1",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -119,7 +119,7 @@
                "data":[
                  "2",
                  "4",
-                 "6"
+                 "5"
                ]
              }
            ]
@@ -180,7 +180,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
+                 "67",
                  "59",
                  "56"
                ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Oct 27 20:05:03 2018</p>
+         Last Run: Sat Oct 27 21:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -234,33 +234,33 @@
                         <td>1</td>
                         <td>-1</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>W</td>
-                        <td>77</td>
+                        <td>WNW</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>4</td>
-                        <td>69</td>
+                        <td>5</td>
+                        <td>68</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>74</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>5</td>
-                        <td>3</td>
+                        <td>4</td>
+                        <td>1</td>
                         <td>8</td>
                         <td>60</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
                         <td>71</td>
                      </tr>
@@ -308,7 +308,7 @@
                "data":[
                  "-1",
                  "0",
-                 "3"
+                 "1"
                ]
              },
              {
@@ -319,7 +319,7 @@
                "data":[
                  "1",
                  "3",
-                 "5"
+                 "4"
                ]
              }
            ]
@@ -371,7 +371,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "4",
+                 "5",
                  "8"
                ]
              },
@@ -380,8 +380,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
-                 "69",
+                 "78",
+                 "68",
                  "60"
                ]
              },
@@ -390,7 +390,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "77",
+                 "78",
                  "74",
                  "71"
                ]
