--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 10:05:02 2018</p>
+         Last Run: Tue Oct 30 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -36,7 +36,7 @@
                         <td>0</td>
                         <td>46</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>W</td>
                         <td>5</td>
                      </tr>
@@ -46,7 +46,7 @@
                         <td>3</td>
                         <td>0</td>
                         <td>1</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
@@ -58,7 +58,7 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "46",
-                 "50",
-                 "54"
+                 "51",
+                 "55"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 10:05:02 2018</p>
+         Last Run: Tue Oct 30 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 10:05:02 2018</p>
+         Last Run: Tue Oct 30 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -463,11 +463,11 @@
                         <td>Chance of Rain</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>61</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>NW</td>
+                        <td>WNW</td>
                         <td>95</td>
                      </tr>
                      <tr>
@@ -475,11 +475,11 @@
                         <td>Chance of Rain</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>59</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>NNW</td>
+                        <td>NW</td>
                         <td>94</td>
                      </tr>
                      <tr>
@@ -590,8 +590,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "53",
-                 "53",
+                 "54",
+                 "54",
                  "55"
                ]
              },
