--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 04:05:02 2018</p>
+         Last Run: Wed Oct 31 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -45,11 +45,11 @@
                         <td>Partly Cloudy</td>
                         <td>3</td>
                         <td>1</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>71</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SW</td>
+                        <td>SSW</td>
                         <td>31</td>
                      </tr>
                      <tr>
@@ -58,9 +58,9 @@
                         <td>6</td>
                         <td>4</td>
                         <td>4</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSW</td>
                         <td>33</td>
                      </tr>
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "7",
-                 "5",
+                 "6",
                  "4"
                ]
              },
@@ -173,7 +173,7 @@
                "data":[
                  "81",
                  "71",
-                 "61"
+                 "62"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 04:05:02 2018</p>
+         Last Run: Wed Oct 31 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -245,13 +245,13 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>24</td>
-                        <td>55</td>
+                        <td>31</td>
+                        <td>56</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>WSW</td>
                         <td>96</td>
                      </tr>
@@ -260,7 +260,7 @@
                         <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>22</td>
+                        <td>24</td>
                         <td>53</td>
                         <td>1</td>
                         <td>11</td>
@@ -272,7 +272,7 @@
                         <td>Overcast</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>21</td>
+                        <td>23</td>
                         <td>51</td>
                         <td>0</td>
                         <td>10</td>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "31",
                  "24",
-                 "22",
-                 "21"
+                 "23"
                ]
              },
              {
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
+                 "56",
                  "53",
                  "51"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 04:05:02 2018</p>
+         Last Run: Wed Oct 31 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,7 +464,7 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>30</td>
-                        <td>78</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
@@ -472,14 +472,14 @@
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>23</td>
-                        <td>78</td>
+                        <td>31</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>69</td>
                      </tr>
                      <tr>
@@ -488,10 +488,10 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>14</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>71</td>
                      </tr>
                   </tbody>
@@ -591,7 +591,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "30",
-                 "23",
+                 "31",
                  "14"
                ]
              },
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "78",
-                 "80"
+                 "79",
+                 "79",
+                 "81"
                ]
              },
              {
